# xfactors

./: .gitignore  README.md  pyproject.toml
archive/: decoder.py  encoder.py
disdiff_adapters/arch/classifier/: __init__.py  classifier.py
disdiff_adapters/arch/multi_distillme/: __init__.py  dev.py  multi_distillme.py  test.py  test_x.py  train.py  train_x.py  train_x_ab_s.py  x_ab_s.py  xfactors.py
disdiff_adapters/arch/vae/: __init__.py  ae.py  block.py  decoder.py  encoder.py  test.py  train.py  vae.py
disdiff_adapters/data_module/: __init__.py  bloodmnist.py  cars3d.py  celeba.py  dsprites.py  latent.py  mnist.py  mpi3d.py  shapes3d.py
disdiff_adapters/dataset/: __init__.py  bloodmnist.py  cars3d.py  celeba.py  dsprites.py  latent.py  mnist.py  mpi3d.py  shapes3d.py
disdiff_adapters/json/: best_tab.json  ckpt_path_x.json  metrics_complete.json  metrics_final_0.json  metrics_test.json
disdiff_adapters/loss/: loss.py
disdiff_adapters/metric/: __init__.py  factorvae.py  factorvaelight.py  fid.py  log_json.py
disdiff_adapters/notebook/: metric.ipynb  scaling_laws.ipynb  x_gen.ipynb
disdiff_adapters/scripts/: parse_train_tree.sh
disdiff_adapters/scripts/train/: sweep_md.sh  sweep_x.sh  (+4 more)
disdiff_adapters/utils/: const.py  utils.py
raed/: RUNBOOK.md  __init__.py
raed/configs/: ablation_b2_option1.yaml  ablation_b2_option2.yaml  ablation_dinotok_decoder.yaml  ablation_no_kl_t.yaml  ablation_no_nce.yaml  ablation_plain_decoder.yaml  stage_a_base.yaml  stage_a_dinotok.yaml  stage_b2_diffusion.yaml  stage_b_decoder.yaml
raed/src/: __init__.py
(+38 files in other folders)
